oxiplate-derive/tests/broken/numbers/unexpected-suffix.stderr
error: Unexpected suffix
 --> tests/broken/numbers/unexpected-suffix.rs:4:23
  |
4 | #[oxiplate_inline("{{ 0Not_Supported }}")]
  |                       ^^^^^^^^^^^^^^
